quorum/test/tests/TypeChecker/Pass/ImpAssignIntegerIntObjWrapped.quorum
class main
    action main
        Integer int
        int:SetValue(5)
        integer i = int
    end
end