quorum/test/tests/TypeChecker/Fail/ImpAssignBooleanIntObjWrapped.quorum
class main
    action main
        Integer int
        int:setValue(5)
        boolean b = int
    end
end